--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,10 +1,8 @@
 ---
 name: Docs Publish
 on:
-  workflow_dispatch
   push:
-    tags:
-      - "*"
+    branches: [ 'deploy-v2.5.1' ]
 
 jobs:
   deploy:
